fix help icon alignment

--- a/public/index.css
+++ b/public/index.css
@@ -9,6 +9,10 @@
   max-width: 1024px;
 }
 
+.pf-c-form__group-label {
+  display: flex;
+  align-items: end;
+}
 .keycloak__form_actions {
   position: fixed;
   bottom: 0px;
